--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/Foodie
+spring.datasource.username=Foodie
+spring.datasource.password=fat
+spring.datasource.driver-class-name=org.postgresql.Driver
 
