--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/KockaFoods
+spring.datasource.username=Foodie
+spring.datasource.password='fat'
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# This will create table automatically in your database
+spring.jpa.hibernate.ddl-auto=create
